fixed scoreboard totals row position on Safari (#2111)

--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -77,3 +77,9 @@
   bottom: 0;
 }
 
+@supports (-webkit-hyphens:none) {
+  .scoreboard > div.scoreboardIntermediate > table .totalsLine {
+    position: static;
+    bottom: unset;
+  }
+}
